[package]
name = "flame"
version = "0.1.9"
authors = ["Ty Overby <ty@pre-alpha.com>"]
license = "MIT/Apache-2.0"
exclude = ["resources/*.png"]

description = "a profiling / flamegraph library"
repository = "https://github.com/TyOverby/flame"
documentation = "http://tyoverby.com/flame/flame/index.html"

[features]
default = []
json = ["serde", "serde_macros", "serde_json"]

[dependencies]
lazy_static = "0.2.1"
thread-id = "2.0.0"

[dependencies.serde]
version = "0.8"
optional = true

[dependencies.serde_macros]
version = "0.8"
optional = true

[dependencies.serde_json]
version = "0.8"
optional = true
