[package]
name = "flame"
version = "0.1.11"
authors = ["Ty Overby <ty@pre-alpha.com>"]
license = "MIT/Apache-2.0"
exclude = ["resources/*.png"]

description = "a profiling / flamegraph library"
repository = "https://github.com/TyOverby/flame"
documentation = "http://tyoverby.com/flame/flame/index.html"

[features]
default = ["json"]
json = ["serde", "serde_derive", "serde_json"]

[dependencies]
lazy_static = "0.2.*"
thread-id = "3.*.*"

[dependencies.serde]
version = "1.*.*"
optional = true

[dependencies.serde_derive]
version = "1.*.*"
optional = true

[dependencies.serde_json]
version = "1.*.*"
optional = true
