[package]
name = "flame"
version = "0.2.1-pre"
authors = ["Ty Overby <ty@pre-alpha.com>"]
license = "MIT/Apache-2.0"
exclude = ["resources/*.png"]

description = "a profiling / flamegraph library"
repository = "https://github.com/TyOverby/flame"
documentation = "https://docs.rs/flame"

[features]
default = ["json"]
json = ["serde", "serde_derive", "serde_json"]
off = []

[dependencies]
lazy_static = "1.*.*"
thread-id = "3.*.*"

[dependencies.serde]
version = "1.*.*"
optional = true

[dependencies.serde_derive]
version = "1.*.*"
optional = true

[dependencies.serde_json]
version = "1.*.*"
optional = true
